--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "parse-svg-path": "^0.1.1",
     "random-float": "^1.0.0",
     "simplify-path": "^1.1.0",
-    "svg-path-contours": "^2.0.0"
+    "svg-path-contours": "^2.0.0",
+    "triangulate-contours": "^1.0.2"
   },
   "devDependencies": {
     "array-shuffle": "^1.0.0",
